# quick-intro-to-ml

./: LICENSE  README.md  pyproject.toml
01-introduction/: k-nearest neighbour classification.ipynb
01-introduction/tex/: introduction.tex
01-introduction/tex/pics/: AE.graffle  VAE.graffle  nn0.graffle  nn1.graffle  nn3.graffle  nn4.graffle  nn5.graffle  xv0.graffle  xv1.graffle  xv2.graffle  xv3.graffle  xv4.graffle
01-introduction/tex/pics/old/: nn2.graffle
02-probability/: probability theory.ipynb
02-probability/tex/: probability.tex
02-probability/tex/pics/: balls.graffle
03-linearalgebra/: linearalgebra.ipynb
04-informationtheory/: Information Theory.ipynb
05-neural networks/: 01-neuralnetworks1.ipynb  02-early-stopping.ipynb  03-mnist-torch.ipynb  Optimisation.ipynb  scaling.ipynb
05-neural networks/tex/: NN1-intro.tex  NN1-inverted.tex  NN2.tex  NN3.tex  NN4-optimisation.tex  neuralnetworks.tex
05-neural networks/tex/pics/: RNN-rollout.graffle  RNN.graffle  VAE-half.graffle  VAE.graffle  dropout.graffle  optimise5.psd  optimise6.psd  optimise7.psd  rect.graffle  sumlog.graffle
05-neural networks/tex/pics/linreg-pict.graffle/: data.plist  image2.tiff
05-neural networks/tex/pics/nn-deep-pict.graffle/: data.plist
05-neural networks/tex/pics/nn-pict.graffle/: data.plist
05-neural networks/tex/pics/nn0l.graffle/: data.plist  image1.tiff
05-neural networks/tex/pics/nn1l.graffle/: data.plist
05-neural networks/tex/pics/nn2l.graffle/: data.plist
06-vae/: 04-vae-gpt.ipynb  04-vae.ipynb
common/: lectureheader.tex
(+3 files in other folders)
